gameboard place ships at random coordinates

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,24 @@
 
 <body>
     <h1> BATTLESHIP </h1>
-    <div class="user-gameboard-container">
+
+    <div class="game-fields-container">
+        <div class="user-ships-container"> </div>
+        <div class="user-part">
+            <div class="user-gameboard-container"></div>
+            <div class="caption">User Board</div>
+        </div>
+        <div class="openent-part">
+            <div class="openent-gameboard-container"></div>
+            <div class="caption">openent</div>
+        </div>
 
     </div>
+
+
+    </div>
+    </div>
+
 
 </body>
 
