--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,8 +17,8 @@
             <div class="user-gameboard-container"></div>
             <div class="caption">User Board</div>
         </div>
-        <div class="openent-part">
-            <div class="openent-gameboard-container"></div>
+        <div class="opponent-part">
+            <div class="opponent-gameboard-container"></div>
             <div class="caption">openent</div>
         </div>
 
