--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,26 +10,26 @@
 
 <body>
     <h1> BATTLESHIP </h1>
-
+    <h3 class="screen"> </h3>
     <div class="game-fields-container">
         <div class="user-ships-container"> </div>
         <div class="user-part">
             <div class="user-gameboard-container"></div>
-            <div class="caption">User Board</div>
+            <div class="caption">
+                <div class="userboard-title"> Player </div>
+                <button class="randomise">Randomise</button>
+            </div>
         </div>
         <div class="opponent-part">
             <div class="opponent-gameboard-container"></div>
-            <div class="caption">openent</div>
+            <div class="caption">
+                <div class="opponentboard-title">Opponent</div>
+                <button class="play"> Play</button>
+            </div>
         </div>
 
-
     </div>
-
-
-    </div>
-    </div>
-
-
+    <button class="restart">Restart</button>
 </body>
 
 </html>
